text displaying as component

--- a/ios/textract.xcodeproj/xcshareddata/xcschemes/textract-tvOS.xcscheme
+++ b/ios/textract.xcodeproj/xcshareddata/xcschemes/textract-tvOS.xcscheme
@@ -31,7 +31,7 @@
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
                BuildableName = "textract-tvOS.app"
                BlueprintName = "textract-tvOS"
-               ReferencedContainer = "container:Textract.xcodeproj">
+               ReferencedContainer = "container:textract.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -45,7 +45,7 @@
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
                BuildableName = "textract-tvOSTests.xctest"
                BlueprintName = "textract-tvOSTests"
-               ReferencedContainer = "container:Textract.xcodeproj">
+               ReferencedContainer = "container:textract.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -64,7 +64,7 @@
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
                BuildableName = "textract-tvOSTests.xctest"
                BlueprintName = "textract-tvOSTests"
-               ReferencedContainer = "container:Textract.xcodeproj">
+               ReferencedContainer = "container:textract.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -74,7 +74,7 @@
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
             BuildableName = "textract-tvOS.app"
             BlueprintName = "textract-tvOS"
-            ReferencedContainer = "container:Textract.xcodeproj">
+            ReferencedContainer = "container:textract.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -98,7 +98,7 @@
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
             BuildableName = "textract-tvOS.app"
             BlueprintName = "textract-tvOS"
-            ReferencedContainer = "container:Textract.xcodeproj">
+            ReferencedContainer = "container:textract.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -117,7 +117,7 @@
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
             BuildableName = "textract-tvOS.app"
             BlueprintName = "textract-tvOS"
-            ReferencedContainer = "container:Textract.xcodeproj">
+            ReferencedContainer = "container:textract.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
